force-app/main/default/objects/Auditoria__c/Auditoria__c.object-meta.xml
<CustomObject>
    <label>Auditoria</label>
    <nameField>
        <label>Auditoria Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Auditorias</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>