force-app/main/default/objects/Auditoria__c/fields/Nombre_de_Objeto__c.field-meta.xml
<CustomField>
    <fullName>Nombre_de_Objeto__c</fullName>
    <label>Nombre de Objeto</label>
    <length>50</length>
    <type>Text</type>
</CustomField>