force-app/main/default/objects/Auditoria__c/fields/Nombre_Registro__c.field-meta.xml
<CustomField>
    <fullName>Nombre_Registro__c</fullName>
    <label>Nombre Registro</label>
    <length>100</length>
    <type>Text</type>
</CustomField>