force-app/main/default/objects/Auditoria__c/fields/Usuario__c.field-meta.xml
<CustomField>
    <fullName>Usuario__c</fullName>
    <label>Usuario</label>
    <type>Url</type>
</CustomField>